AC_PREREQ(2.50)
AC_INIT()

AM_INIT_AUTOMAKE(connman-core, 0.0)
AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE

AC_PREFIX_DEFAULT(/usr/local)

if (test "${CFLAGS}" = ""); then
	CFLAGS="-Wall -O2"
fi

AC_LANG_C

AC_PROG_CC
AC_PROG_CC_PIE
AC_PROG_INSTALL

PKG_CHECK_MODULES(GDBUS, gdbus, dummy=yes,
				AC_MSG_ERROR(libgdbus is required))
AC_SUBST(GDBUS_CFLAGS)
AC_SUBST(GDBUS_LIBS)

AC_OUTPUT(Makefile src/Makefile)
