AC_PREREQ(2.50)
AC_INIT()

AM_INIT_AUTOMAKE(connman-core, 0.0)
AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE

AC_PREFIX_DEFAULT(/usr/local)

if (test "${CFLAGS}" = ""); then
	CFLAGS="-Wall -O2"
fi

AC_LANG_C

AC_PROG_CC
AC_PROG_CC_PIE
AC_PROG_INSTALL

m4_define([_LT_AC_TAGCONFIG], [])
m4_ifdef([AC_LIBTOOL_TAGS], [AC_LIBTOOL_TAGS([])])

AC_DISABLE_STATIC
AC_PROG_LIBTOOL

PKG_CHECK_MODULES(GMODULE, gmodule-2.0, dummy=yes,
				AC_MSG_ERROR(gmodule is required))
AC_SUBST(GMODULE_CFLAGS)
AC_SUBST(GMODULE_LIBS)

PKG_CHECK_MODULES(GDBUS, gdbus, dummy=yes,
				AC_MSG_ERROR(libgdbus is required))
AC_SUBST(GDBUS_CFLAGS)
AC_SUBST(GDBUS_LIBS)

PKG_CHECK_MODULES(DBUS, dbus-1 >= 1.0, dummy=yes,
				AC_MSG_ERROR(libdbus is required))
AC_SUBST(DBUS_CFLAGS)
AC_SUBST(DBUS_LIBS)

PKG_CHECK_MODULES(HAL, hal >= 0.5.8, dummy=yes,
				AC_MSG_ERROR(libhal is required))
AC_SUBST(HAL_CFLAGS)
AC_SUBST(HAL_LIBS)

AC_OUTPUT(Makefile include/Makefile src/Makefile
			plugins/Makefile scripts/Makefile)
